syntax = "proto2";

package coms309.server;

option java_multiple_files = true;
option java_package = "coms309.server.Schema";
option java_outer_classname = "DataObjectProto";

message DataObjectSchema {
  oneof data {
    GamestateSchema gamestate = 1;
    MessageSchema message = 2;
    EntitySchema entity = 3;
  }
}
message GamestateSchema {
  optional uint32 difficulty = 1;
  optional uint32 status = 2;
  optional uint32 map = 3;
  optional uint32 round = 4;

  message Player {
    optional uint32 pid = 1;
    optional uint64 id = 2;
  }

  repeated Player players = 5;
}

message MessageSchema {
  optional string author = 1;
  required string code = 2;
  required string message = 3;
}

message EntitySchema {
  required uint32 x = 1;
  required uint32 y = 2;
  required uint32 objectId = 3;
  required uint32 ownerId = 4;
}